--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section class="profile">
     <div class="profile-flex">
-      <img src="/picture/Me.png" alt="Profile Picture">
+      <img src="../picture/Me.png" alt="Profile Picture">
       <table class="profile-table">
         <tr>
           <td><b>Name:</b></td>
